[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Cerate_playfab_panel.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/basefont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/createpannel_QR_request.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.25098, 0.203922, 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[node name="Cerate_playfab_panel" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.0
margin_right = 231.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qr_image" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -217.0
margin_right = 168.0
margin_bottom = 133.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="qr_image"]
margin_left = 147.0
margin_top = 355.0
margin_right = 187.0
margin_bottom = 369.0
grow_horizontal = 2
custom_fonts/font = SubResource( 6 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -149.5
margin_right = 149.5
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Create New User"

[node name="username" type="TextEdit" parent="."]
margin_left = 50.0
margin_top = 161.0
margin_right = 388.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )

[node name="password" type="TextEdit" parent="."]
margin_left = 50.0
margin_top = 247.0
margin_right = 388.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 3 )

[node name="password2" type="TextEdit" parent="."]
margin_left = 50.0
margin_top = 332.0
margin_right = 388.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 50.0
margin_top = 130.0
margin_right = 142.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 3 )
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 50.0
margin_top = 221.0
margin_right = 138.0
margin_bottom = 245.0
custom_fonts/font = ExtResource( 3 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 50.0
margin_top = 304.0
margin_right = 215.0
margin_bottom = 328.0
custom_fonts/font = ExtResource( 3 )
text = "Re-Type Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create_but" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 100.0
margin_right = 50.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_but" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -39.0
margin_top = -42.0
margin_right = 39.0
custom_fonts/font = SubResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QR_request" type="HTTPRequest" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="Create_but" to="." method="_on_Create_but_pressed"]
[connection signal="pressed" from="Back_but" to="." method="_on_Back_but_pressed"]
[connection signal="image_loaded" from="QR_request" to="." method="_on_QR_request_image_loaded"]
[connection signal="request_completed" from="QR_request" to="QR_request" method="_on_QR_request_request_completed"]
